--- a/英文内容页.html
+++ b/英文内容页.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>页面 4</title>
+    <title>英文内容页</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="files/页面_4/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/英文内容页/styles.css" type="text/css" rel="stylesheet"/>
     <script src="resources/scripts/jquery-3.2.1.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
     <script src="resources/scripts/axure/globals.js"></script>
@@ -38,7 +38,7 @@
     <script src="resources/scripts/axure/math.js"></script>
     <script src="resources/scripts/axure/jquery.nicescroll.min.js"></script>
     <script src="data/document.js"></script>
-    <script src="files/页面_4/data.js"></script>
+    <script src="files/英文内容页/data.js"></script>
     <script type="text/javascript">
       $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
@@ -49,10 +49,18 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u27" class="ax_default _二级标题">
-        <div id="u27_div" class=""></div>
-        <div id="u27_text" class="text ">
-          <p><span>暂</span></p><p><span>无</span></p><p><span><br></span></p><p><span>点</span></p><p><span>击</span></p><p><span>此</span></p><p><span>页</span></p><p><span>面</span></p><p><span>离</span></p><p><span>开</span></p>
+      <div id="u30" class="ax_default box_1">
+        <div id="u30_div" class=""></div>
+        <div id="u30_text" class="text ">
+          <p><span>中文</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (线段) -->
+      <div id="u31" class="ax_default arrow">
+        <img id="u31_img" class="img " src="images/内容页/u23.svg"/>
+        <div id="u31_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
     </div>
