--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>Page 1</title>
+    <title>手机页面1</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="files/page_1/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/手机页面1/styles.css" type="text/css" rel="stylesheet"/>
     <script src="resources/scripts/jquery-3.2.1.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
     <script src="resources/scripts/axure/globals.js"></script>
@@ -38,45 +38,68 @@
     <script src="resources/scripts/axure/math.js"></script>
     <script src="resources/scripts/axure/jquery.nicescroll.min.js"></script>
     <script src="data/document.js"></script>
-    <script src="files/page_1/data.js"></script>
+    <script src="files/手机页面1/data.js"></script>
     <script type="text/javascript">
       $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
       $axure.utils.getReloadPath = function() { return 'resources/reload.html'; };
+        // 判断是否为手机端的简单逻辑，通过检测userAgent中是否包含常见手机标识字符串
+        function isMobile() {
+            return /(iPhone|iPad|iPod|Android|webOS|BlackBerry|Windows Phone)/i.test(navigator.userAgent);
+        }
+        if (isMobile()) {
+            window.location.href = "手机页面1.html";
+        }
     </script>
   </head>
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (矩形) -->
-      <div id="u0" class="ax_default _一级标题">
-        <div id="u0_div" class=""></div>
-        <div id="u0_text" class="text ">
-          <p><span>心理疗愈网站</span></p>
+      <!-- Unnamed (图像 ) -->
+      <div id="u6" class="ax_default image">
+        <img id="u6_img" class="img " src="images/手机页面1/u6.png"/>
+        <div id="u6_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1" class="ax_default box_1">
-        <img id="u1_img" class="img " src="images/page_1/u1.svg"/>
-        <div id="u1_text" class="text ">
-          <p><span>进入</span></p>
+      <div id="u7" class="ax_default _一级标题">
+        <div id="u7_div" class=""></div>
+        <div id="u7_text" class="text ">
+          <p><span>重庆文化生态旅游</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u2" class="ax_default box_1">
-        <img id="u2_img" class="img " src="images/page_1/u1.svg"/>
-        <div id="u2_text" class="text ">
-          <p><span>离开</span></p>
+      <div id="u8" class="ax_default button">
+        <img id="u8_img" class="img " src="images/手机页面1/u8.svg"/>
+        <div id="u8_text" class="text ">
+          <p><span>开</span></p><p><span>始</span></p><p><span>浏</span></p><p><span>览</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (图像 ) -->
+      <div id="u9" class="ax_default image">
+        <img id="u9_img" class="img " src="images/页面_1/u4.png"/>
+        <div id="u9_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u3" class="ax_default _二级标题">
-        <div id="u3_div" class=""></div>
-        <div id="u3_text" class="text ">
-          <p><span>真诚的希望你能通过这个网页调整好你的情绪</span></p>
+      <div id="u10" class="ax_default button">
+        <div id="u10_div" class=""></div>
+        <div id="u10_text" class="text ">
+          <p><span>English</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u11" class="ax_default button">
+        <img id="u11_img" class="img " src="images/手机页面1/u8.svg"/>
+        <div id="u11_text" class="text ">
+          <p><span>离开网站</span></p>
         </div>
       </div>
     </div>
