--- a/手机内容英文2.html
+++ b/手机内容英文2.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>页面 1</title>
+    <title>手机内容英文2</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="files/页面_1/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/手机内容英文2/styles.css" type="text/css" rel="stylesheet"/>
     <script src="resources/scripts/jquery-3.2.1.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
     <script src="resources/scripts/axure/globals.js"></script>
@@ -38,7 +38,7 @@
     <script src="resources/scripts/axure/math.js"></script>
     <script src="resources/scripts/axure/jquery.nicescroll.min.js"></script>
     <script src="data/document.js"></script>
-    <script src="files/页面_1/data.js"></script>
+    <script src="files/手机内容英文2/data.js"></script>
     <script type="text/javascript">
       $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
@@ -48,51 +48,19 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (图像 ) -->
-      <div id="u0" class="ax_default image">
-        <img id="u0_img" class="img " src="images/页面_1/u0.png"/>
-        <div id="u0_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (矩形) -->
+      <div id="u20" class="ax_default box_1">
+        <div id="u20_div" class=""></div>
+        <div id="u20_text" class="text ">
+          <p><span>中文</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1" class="ax_default _一级标题">
-        <div id="u1_div" class=""></div>
-        <div id="u1_text" class="text ">
-          <p><span>重庆文化生态旅游</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u2" class="ax_default button">
-        <img id="u2_img" class="img " src="images/页面_1/u2.svg"/>
-        <div id="u2_text" class="text ">
-          <p><span>开</span></p><p><span>始</span></p><p><span>浏</span></p><p><span>览</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u3" class="ax_default button">
-        <img id="u3_img" class="img " src="images/页面_1/u3.svg"/>
-        <div id="u3_text" class="text ">
-          <p><span>离</span></p><p><span>开</span></p><p><span>网</span></p><p><span>站</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (图像 ) -->
-      <div id="u4" class="ax_default image">
-        <img id="u4_img" class="img " src="images/页面_1/u4.png"/>
-        <div id="u4_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u5" class="ax_default button">
-        <div id="u5_div" class=""></div>
-        <div id="u5_text" class="text ">
-          <p><span>English</span></p>
+      <div id="u21" class="ax_default box_1">
+        <div id="u21_div" class=""></div>
+        <div id="u21_text" class="text ">
+          <p><span>return</span></p>
         </div>
       </div>
     </div>
