--- a/手机页面英文1.html
+++ b/手机页面英文1.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>页面 2</title>
+    <title>手机页面英文1</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="files/页面_2/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/手机页面英文1/styles.css" type="text/css" rel="stylesheet"/>
     <script src="resources/scripts/jquery-3.2.1.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
     <script src="resources/scripts/axure/globals.js"></script>
@@ -38,7 +38,7 @@
     <script src="resources/scripts/axure/math.js"></script>
     <script src="resources/scripts/axure/jquery.nicescroll.min.js"></script>
     <script src="data/document.js"></script>
-    <script src="files/页面_2/data.js"></script>
+    <script src="files/手机页面英文1/data.js"></script>
     <script type="text/javascript">
       $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
@@ -48,67 +48,27 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (矩形) -->
-      <div id="u9" class="ax_default _一级标题">
-        <div id="u9_div" class=""></div>
-        <div id="u9_text" class="text ">
-          <p><span>私人心理医生疏导</span></p>
+      <!-- Unnamed (图像 ) -->
+      <div id="u14" class="ax_default image">
+        <img id="u14_img" class="img " src="images/手机页面1/u6.png"/>
+        <div id="u14_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u10" class="ax_default sticky_2">
-        <div id="u10_div" class=""></div>
-        <div id="u10_text" class="text " style="display:none; visibility: hidden">
+      <!-- Unnamed (图像 ) -->
+      <div id="u15" class="ax_default image">
+        <img id="u15_img" class="img " src="images/页面_1/u4.png"/>
+        <div id="u15_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u11" class="ax_default _一级标题">
-        <div id="u11_div" class=""></div>
-        <div id="u11_text" class="text ">
-          <p><span>一个月</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u12" class="ax_default _二级标题">
-        <div id="u12_div" class=""></div>
-        <div id="u12_text" class="text ">
-          <p><span>199元</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u13" class="ax_default _一级标题">
-        <div id="u13_div" class=""></div>
-        <div id="u13_text" class="text ">
-          <p><span>连续包月</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u14" class="ax_default _二级标题">
-        <div id="u14_div" class=""></div>
-        <div id="u14_text" class="text ">
-          <p><span>150元</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u15" class="ax_default _一级标题">
-        <div id="u15_div" class=""></div>
-        <div id="u15_text" class="text ">
-          <p><span>包年</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u16" class="ax_default _二级标题">
+      <div id="u16" class="ax_default button">
         <div id="u16_div" class=""></div>
         <div id="u16_text" class="text ">
-          <p><span>299元</span></p>
+          <p><span>中文</span></p>
         </div>
       </div>
 
@@ -116,55 +76,23 @@
       <div id="u17" class="ax_default _一级标题">
         <div id="u17_div" class=""></div>
         <div id="u17_text" class="text ">
-          <p><span>终身</span></p>
+          <p><span>Chongqing Cultural Ecotourism</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u18" class="ax_default _二级标题">
-        <div id="u18_div" class=""></div>
+      <div id="u18" class="ax_default button">
+        <img id="u18_img" class="img " src="images/手机页面英文1/u18.svg"/>
         <div id="u18_text" class="text ">
-          <p><span>100000元</span></p>
+          <p><span>Start browsing</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u19" class="ax_default _一级标题">
-        <div id="u19_div" class=""></div>
+      <div id="u19" class="ax_default button">
+        <img id="u19_img" class="img " src="images/手机页面英文1/u19.svg"/>
         <div id="u19_text" class="text ">
-          <p><span>支付</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u20" class="ax_default _一级标题">
-        <div id="u20_div" class=""></div>
-        <div id="u20_text" class="text ">
-          <p><span>离开</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u21" class="ax_default _一级标题">
-        <div id="u21_div" class=""></div>
-        <div id="u21_text" class="text ">
-          <p><span>支付</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u22" class="ax_default _一级标题">
-        <div id="u22_div" class=""></div>
-        <div id="u22_text" class="text ">
-          <p><span>支付</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u23" class="ax_default _一级标题">
-        <div id="u23_div" class=""></div>
-        <div id="u23_text" class="text ">
-          <p><span>支付</span></p>
+          <p><span>Leave the website</span></p>
         </div>
       </div>
     </div>
