--- a/英文首页1.html
+++ b/英文首页1.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>页面 3</title>
+    <title>英文首页1</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="files/页面_3/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/英文首页1/styles.css" type="text/css" rel="stylesheet"/>
     <script src="resources/scripts/jquery-3.2.1.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
     <script src="resources/scripts/axure/globals.js"></script>
@@ -38,7 +38,7 @@
     <script src="resources/scripts/axure/math.js"></script>
     <script src="resources/scripts/axure/jquery.nicescroll.min.js"></script>
     <script src="data/document.js"></script>
-    <script src="files/页面_3/data.js"></script>
+    <script src="files/英文首页1/data.js"></script>
     <script type="text/javascript">
       $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
@@ -48,27 +48,51 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (矩形) -->
-      <div id="u24" class="ax_default _一级标题">
-        <div id="u24_div" class=""></div>
-        <div id="u24_text" class="text ">
-          <p><span>点击下方文字面板获取治疗方案</span></p>
+      <!-- Unnamed (图像 ) -->
+      <div id="u24" class="ax_default image">
+        <img id="u24_img" class="img " src="images/页面_1/u0.png"/>
+        <div id="u24_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u25" class="ax_default _二级标题">
+      <div id="u25" class="ax_default _一级标题">
         <div id="u25_div" class=""></div>
         <div id="u25_text" class="text ">
-          <p><span>获取</span></p>
+          <p><span>Chongqing Cultural Ecotourism</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u26" class="ax_default _二级标题">
-        <div id="u26_div" class=""></div>
+      <div id="u26" class="ax_default button">
+        <img id="u26_img" class="img " src="images/英文首页1/u26.svg"/>
         <div id="u26_text" class="text ">
-          <p><span>离开</span></p>
+          <p><span>Start browsing</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u27" class="ax_default button">
+        <img id="u27_img" class="img " src="images/英文首页1/u27.svg"/>
+        <div id="u27_text" class="text ">
+          <p><span>Leave the website</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (图像 ) -->
+      <div id="u28" class="ax_default image">
+        <img id="u28_img" class="img " src="images/页面_1/u4.png"/>
+        <div id="u28_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u29" class="ax_default button">
+        <div id="u29_div" class=""></div>
+        <div id="u29_text" class="text ">
+          <p><span>中文</span></p>
         </div>
       </div>
     </div>
