--- a/英文首页1.html
+++ b/英文首页1.html
@@ -50,7 +50,7 @@
 
       <!-- Unnamed (图像 ) -->
       <div id="u24" class="ax_default image">
-        <img id="u24_img" class="img " src="images/页面_1/u0.png"/>
+        <img id="u24_img" class="img " src="images/英文首页1/u24.png"/>
         <div id="u24_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
@@ -82,7 +82,7 @@
 
       <!-- Unnamed (图像 ) -->
       <div id="u28" class="ax_default image">
-        <img id="u28_img" class="img " src="images/页面_1/u4.png"/>
+        <img id="u28_img" class="img " src="images/页面_1/u3.png"/>
         <div id="u28_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
