--- a/index.html
+++ b/index.html
@@ -79,27 +79,27 @@
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u3" class="ax_default button">
-        <img id="u3_img" class="img " src="images/页面_1/u3.svg"/>
-        <div id="u3_text" class="text ">
-          <p><span>离</span></p><p><span>开</span></p><p><span>网</span></p><p><span>站</span></p>
-        </div>
-      </div>
-
       <!-- Unnamed (图像 ) -->
-      <div id="u4" class="ax_default image">
-        <img id="u4_img" class="img " src="images/页面_1/u4.png"/>
-        <div id="u4_text" class="text " style="display:none; visibility: hidden">
+      <div id="u3" class="ax_default image">
+        <img id="u3_img" class="img " src="images/页面_1/u3.png"/>
+        <div id="u3_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u5" class="ax_default button">
-        <div id="u5_div" class=""></div>
-        <div id="u5_text" class="text ">
+      <div id="u4" class="ax_default button">
+        <div id="u4_div" class=""></div>
+        <div id="u4_text" class="text ">
           <p><span>English</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u5" class="ax_default button">
+        <img id="u5_img" class="img " src="images/页面_1/u2.svg"/>
+        <div id="u5_text" class="text ">
+          <p><span>退</span></p><p><span>出</span></p><p><span>浏</span></p><p><span>览</span></p>
         </div>
       </div>
     </div>
